--- a/Dating.API/appsettings.json
+++ b/Dating.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings":{
+    "Token":"Super Secret Key Minni"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
   },
